--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "version": "1.0.0",
   "description": "Some more filters and masks to use with the OpenTok.js library client-side",
   "main": "index.js",
-  "dependencies": {
-    "tracking": "^1.1.3"
-  },
+  "dependencies": {},
   "devDependencies": {
     "http-server": "^0.11"
   },
