--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "Some more filters and masks to use with the OpenTok.js library client-side",
   "main": "index.js",
-  "dependencies": {},
+  "dependencies": {
+    "tracking": "^1.1.3"
+  },
   "devDependencies": {
     "http-server": "^0.11"
   },
